# ChangeLog for gnome-extra/evolution-data-server
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.202 2009/02/03 20:49:00 aballier Exp $

  03 Feb 2009; Alexis Ballier <aballier@gentoo.org>
  evolution-data-server-2.24.4.ebuild:
  Dont call true with an absolute path which is different between FreeBSD
  and linux, bug #257471

*evolution-data-server-2.24.4 (01 Feb 2009)

  01 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/calentry.schema, -evolution-data-server-2.22.2.ebuild,
  evolution-data-server-2.24.2.ebuild, evolution-data-server-2.24.3.ebuild,
  +evolution-data-server-2.24.4.ebuild:
  Bump to 2.24.4. Lots of bug fixes. Install LDAP schemas, bug #83988.

*evolution-data-server-2.24.3 (18 Jan 2009)

  18 Jan 2009; Arun Raghavan <ford_prefect@gentoo.org>
  +evolution-data-server-2.24.3.ebuild:
  Bump to 2.24.3 - lots of bug fixes. Dropping icaltz-util.patch since this
  has been committed.

  20 Dec 2008; nixnut <nixnut@gentoo.org>
  evolution-data-server-2.22.3-r1.ebuild:
  Stable on ppc wrt bug 250728

  17 Dec 2008; Daniel Gryniewicz <dang@gentoo.org>
  evolution-data-server-2.22.3-r1.ebuild:
  Marked stable on amd64 for bug #250728

  16 Dec 2008; Raúl Porcel <armin76@gentoo.org>
  evolution-data-server-2.22.3-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #250728

  16 Dec 2008; Brent Baude <ranger@gentoo.org>
  evolution-data-server-2.22.3-r1.ebuild:
  Marking evolution-data-server-2.22.3-r1 ppc64 for bug 250728

*evolution-data-server-2.24.2 (01 Dec 2008)

  01 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/evolution-data-server-2.23.6-as-needed.patch,
  +evolution-data-server-2.24.2.ebuild:
  New version for GNOME 2.24. Support for Google and WebDAV contacts
  backend, Quota for IMAP and sqlite on-disk format.

  13 Nov 2008; Brent Baude <ranger@gentoo.org>