@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/evolution-exchange
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-exchange/ChangeLog,v 1.81 2009/02/01 10:27:50 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-exchange/ChangeLog,v 1.82 2009/02/06 03:09:02 jer Exp $
+
+  06 Feb 2009; Jeroen Roovers <jer@gentoo.org>
+  evolution-exchange-2.22.3-r2.ebuild:
+  Stable for HPPA (bug #250728).
 
 *evolution-exchange-2.24.4 (01 Feb 2009)
 
